--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ VITE_APPWRITE_BUCKET_ID="69249bdf00024dbc07d6"
 VITE_APPWRITE_LIKES_COLLECTION_ID="Likes"
 VITE_APPWRITE_COMMENTLIKES_COLLECTION_ID="comment_likes"
 VITE_APPWRITE_FOLLOWS_COLLECTION_ID="follows"
+VITE_APPWRITE_COMMENTS_COLLECTION_ID="comments"
 
 
