Fix netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,8 @@
 
 [build.environment]
   NODE_VERSION = "20"
-npm install vite --save
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
